# goldilocks

./: .gitignore  Study.md  bookmarks.json  build-command
layer/GlieseLibrary/: CMakeLists.txt
layer/GlieseLibrary/esql/dev/include/: sqlca.h
layer/GlieseTool/: CMakeLists.txt
layer/GlieseTool/gloader/dev/src/: ztdBinaryMode.c
layer/GlieseTool/gpec/dev/src/ztpw/: ztpwPrecomp.c
