CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
# Avoid warnings in higher versions
IF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.6)
 CMAKE_POLICY(VERSION 2.8)
ENDIF()

# If choose to build documentation, then search for Doxygen executables.
INCLUDE (${CMAKE_ROOT}/Modules/CMakeDependentOption.cmake)
CMAKE_DEPENDENT_OPTION(BUILD_DOCUMENTATION_API 
                      "Build API Documentation with Doxygen" ON
                       BUILD_DOCUMENTATION OFF)

# If choose to build documentation, then search for Doxygen executables.
IF(BUILD_DOCUMENTATION_API)
  FIND_PACKAGE(Doxygen REQUIRED)

  OPTION(DOXYGEN_SHORT_NAMES "Build Standard Layer documentations with short files name" OFF)
  MARK_AS_ADVANCED(DOXYGEN_SHORT_NAMES)
  IF(DOXYGEN_SHORT_NAMES)
    SET(DOXYGEN_SHORT_NAMES YES)
  ELSE(DOXYGEN_SHORT_NAMES)
    SET(DOXYGEN_SHORT_NAMES NO)
  ENDIF(DOXYGEN_SHORT_NAMES)

  #
  # Configure the script and the doxyfile, then add target
  #
  SET(HAVE_DOT_YESNO NO)
  IF(DOT)
    SET(HAVE_DOT_YESNO YES)
    IF(NOT DOT_PATH)
      GET_FILENAME_COMPONENT(DOT_PATH ${DOT} PATH)
    ENDIF(NOT DOT_PATH)
  ENDIF(DOT)

  # API target
  CONFIGURE_FILE(
    ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile_ZT_API.in
    ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile_ZT_API)

  ADD_CUSTOM_TARGET(Doxygen_ZT_API ALL
    COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile_ZT_API
    MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile_ZT_API
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    )
ENDIF(BUILD_DOCUMENTATION_API)

#ADD_SUBDIRECTORY(NetworkInterface)

IF(${CMAKE_TARGET_HOST_TYPE} MATCHES "server")
ADD_SUBDIRECTORY(gcreatedb)
ADD_SUBDIRECTORY(gmaster)
ADD_SUBDIRECTORY(glsnr)
# ADD_SUBDIRECTORY(cyclone)
# ADD_SUBDIRECTORY(cyclonem)
# ADD_SUBDIRECTORY(LogMirror)
# ADD_SUBDIRECTORY(cymon)
# ADD_SUBDIRECTORY(cymonm)
# ADD_SUBDIRECTORY(ErrorViewing)
# ADD_SUBDIRECTORY(gdump)
ADD_SUBDIRECTORY(gserver)
ADD_SUBDIRECTORY(gdispatcher)
ADD_SUBDIRECTORY(gbalancer)
# ADD_SUBDIRECTORY(gsyncher)
ENDIF()

ADD_SUBDIRECTORY(gsql)
# ADD_SUBDIRECTORY(gpec)
# ADD_SUBDIRECTORY(gerrormsg)
# ADD_SUBDIRECTORY(gloader)
# ADD_SUBDIRECTORY(tablediff)

